--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -10,5 +10,28 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    
+    z-index: 10;
+}
+
+.nav__list{
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
+}
+
+.nav__link{
+    font-size: 1.5rem;
+    color: var(--title-color);
+    font-weight: var(--font-bold);
+}
+
+.copyright{
+    color: hsl(245, 15%, 65%);
+    font-size: var(--small-font-size);
+    transform: rotate(-180deg);
+    writing-mode: vertical-rl;
+}
+
+.Logo{
+    transform: rotate(180deg);
 }
