--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 :root{
   /*color*/
   /*color mode ksl(hue, saturation, lightness)*/
-  --first-color: hsl(353, 100%, 65%);
+  --first-color: hsl(7, 100%, 32%);
   --title-color: hsl(244, 24%, 26%);
   --text-color: hsl(244, 16%, 43%);
   --body-color: hsl:(258, 60%, 98%);
@@ -99,7 +99,7 @@ img{
 
 /*==============Reusable CSS class===================*/
 .container{
-  max-width: 108px;
+  max-width: 940px;
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
@@ -114,7 +114,7 @@ img{
   padding-bottom: 2rem;
 }
 
-.section_title{
+.section__title{
   font-size: var(--h1-font-size);
   margin-left: 0.875rem;
   font-style: var(--font-bold);
@@ -122,7 +122,7 @@ img{
   margin-bottom: 3.75rem;
 }
 
-.section_title::before{
+.section__title::before{
   content: '';
   background: url(./assets/dots-bg.svg);
   height: 2.25rem;
@@ -143,7 +143,7 @@ img{
   background-color: var(--first-color);
   font-weight: var(--font-bold);
 }
-
+/*
 @keyframes button-push{
   50%{
     transform: scale(0.8);
@@ -157,8 +157,11 @@ img{
 .btn:hover{
   animation: button-push 0.3s linear 1;
 }
+*/
 
-
+.btn:hover{
+  background-color: hsl(7, 89%, 64%);
+}
 
 
 /*
