--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -90,3 +90,9 @@
     transform: translateX(-50%);
     animation: ani-mouse 2s linear infinite;
 }
+
+@media screen and (max-width: 1024px){
+    .aside{
+      left: -110px;
+    }
+}
