--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
   --container-color: #fff;
 
   /*Font and typography*/
-  /*.5rem = 8px | 1 rem = 16px*/
+  /*.5rem = 8px  1 rem = 16px*/
   --body-font: "Brawler", serif;
   --h1-font-size: 2.25rem;
   --h2-font-size: 1.5rem;
@@ -34,7 +34,7 @@
 
 }
 
-/*=======Responsive Typography======*/
+/*Responsive Typography*/
 @media screen and (max-width: 1024px){
   :root{
     --h1-font-size: 1.75rem;
@@ -46,7 +46,7 @@
   }
 }
 
-/*=============Base==============*/
+/*Base*/
 *{
   margin: 0;
   padding: 0;
@@ -97,7 +97,7 @@ img{
   vertical-align: middle;
 }
 
-/*==============Reusable CSS class===================*/
+/*Reusable CSS class*/
 .container{
   max-width: 940px;
   padding-left: 15px;
