--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
   --first-color: hsl(7, 100%, 32%);
   --title-color: hsl(244, 24%, 26%);
   --text-color: hsl(244, 16%, 43%);
-  --body-color: hsl:(258, 60%, 98%);
+  --body-color: hsl(258, 60%, 98%);
   --container-color: #fff;
 
   /*Font and typography*/
