sizing for mobile and toggle sidebar fixed

--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -86,7 +86,7 @@
 }
 
 @media screen and (max-width: 1024px){
-    .aside{
-      left: -110px;
+    .home__social-link{
+        font-size: 1.125rem;
     }
 }
