app centered for phone, no sidebar

--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,10 @@ body{
     margin-left: 0;
   }
 }
+
+@media screen and (max-width: 500px){
+  .main{
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
