--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -75,3 +75,12 @@
         left: 0;
     }
 }
+
+@media screen and (max-width: 500px){
+    .aside{
+        display: none;
+    }
+    .nav__toggle{
+        display: none;
+    }
+}
