--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -90,3 +90,10 @@
         font-size: 1.125rem;
     }
 }
+
+
+@media screen and (max-width: 500px){
+    .scroll__down{
+        display: none;
+    }
+}
