--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -40,7 +40,7 @@
 }
 
 .work__card:hover .work__mask{
-    opacity: .5;
+    opacity: .9;
 }
 
 .work__category{
@@ -69,7 +69,7 @@
     transition: .3s;
     opacity: 0;
 }
-;
+
 .work__button{
     color: #fff;
     position: absolute;
@@ -77,7 +77,7 @@
     left: 1.5rem;
     font-size: var(--h3-font-size);
     display: block;
-    background-color: #ffd15c;
+    background-color: var(--first-color);
     height: 40px;
     width: 40px;
     cursor: pointer;
